--- a/#src/scss/all_colors_variables.scss
+++ b/#src/scss/all_colors_variables.scss
@@ -6,5 +6,13 @@ $bg_color_footer: #2F2E2E;
 $colorInput: rgb(96, 94, 94);
 $colorButton: rgb(114, 114, 114);
 $colorButtonHover: rgb(204, 204, 204);
+$blue1: rgba(34, 127, 171, 0.1);
+$blue: #92B8BD;
+$beige: #ECE7E0;
+$green: #7a956b;
+$lightBeige: #f5f0ea;
+$lightGreen:#9ec28b;
+$darkGreen: #495a40;
+$new: rgb(247, 247, 247);
 
 
