--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -68,7 +68,7 @@ body{
     flex-direction: column;
     justify-content: stretch;
 
-    scroll-behavior: smooth;
+    // scroll-behavior: smooth;
         
 } 
 
