--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -6,97 +6,82 @@ $bg_color_footer: #2F2E2E;
 
 $footer_font_family: "OpenSans-Regular";
 
-
-
-.footer{
-
+ 
+.footer {
     font-family: $footer_font_family, Arial, Helvetica, sans-serif;
     font-weight: 400;
     letter-spacing: 1.3px;
+    line-height: 130%;
     background-color: $bg_color_footer;
     text-align: center;
-
 
     position: relative;
     flex: 1 0 auto;
     width: 100%;
     height: 295px;
     z-index: 50;
-    // height: 80vh;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-    &_row{
-        position: absolute;
+    // .footer__row
+    &__row {
+        position: relative;
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 100%;
-       
+        height: 100%;       
         box-sizing: border-box;
         padding: 0 10px;
     }
-
-    
-    &_up{
-        color:$white;
+    // .footer__arrow
+    &__arrow {
+        flex: 1 0 33.333%;
+        padding-top: 40px;
+        a{
+            width: 60px;
+            height: 60px;
+            display: block;
+            margin: 0 auto;
+            position: relative;
+            &:hover::before{
+                border: 2px solid #f9f9f9;
+                transition: border ease 0.3s 0s;
+            }
+        }
+        a::before{
+            content: "";
+            width: 40px;
+            height: 40px;
+            position: absolute;
+            left: 10px;
+            top: 9px;
+            border: 2px solid #f9f9f900;
+            border-radius: 2px;
+            transition: border ease 0.3s 0s;
+        }
+    }
+    // .footer__up
+    &__up {
+        flex: 1 0 33.333%;        
         font-size: 17px;
         letter-spacing: 1.7px;
-        padding-top: 8px;
-        position: relative;
+        padding: 10px;
+        a{
+            color:$white;
+        }
+    }
+    // .footer__copyright
+    &__copyright {
         flex: 1 0 33.333%;
-    }
-    &_copyright{
-        color:$colorTwo;
-        
-        position: relative;
-        flex: 1 0 33.333%;
-    }
-    &_icon{
-        padding-top: 40px;     
-        position: relative;
-        flex: 1 0 33.333%;
-        align-self: center;
-        & a{
-            width: 57px;
-            height: 57px;
-            display: block;
-            z-index: 51;
-            
-            }
-    }
-}   
-
-div.img_before{
-    display: block;
-    width: 57px;
-    height: 57px;
-    background-color: $bg_color_footer;
-    z-index: 1;
-    &:hover img.footer_first_icon{
-        visibility: hidden;
-    }
-    &:not(hover) img.footer_first_icon{
-        visibility: visible;
-    }
-    & img.footer_second_icon{
-        position: absolute;
-        bottom: 1px;
-        left: 0;
-        
-    }
-    &:hover img.footer_second_icon{
-        visibility: visible;
-    }
-    &:not(hover) img.footer_second_icon{
-        visibility: hidden;
+        color:$colorTwo;        
     }
 }
- 
 
+// .to_top {
 
-
-
-  
+// }
 
 
 
