fixed burger(should have deleted transform-style: preserve-3d from his parent element), add swipes for touchscreens

--- a/#src/scss/content.scss
+++ b/#src/scss/content.scss
@@ -348,6 +348,9 @@ $img_container_width3: math.div($viewport_width, 3);
     align-items:center;
     // -webkit-tap-highlight-color: transparent;
 
+    left: 0;
+    top: 0;
+
 }
 
 
