--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -10,9 +10,8 @@ $colorOne: rgb(47, 46, 46);
     z-index: 1;
     min-height: 81px;
     // background-color: $white;
-    transform-style: preserve-3d; 
-    opacity: 1;
-    
+    // transform-style: preserve-3d; 
+    opacity: 1;    
   
     &_row{
         display: flex;
@@ -51,7 +50,7 @@ $colorOne: rgb(47, 46, 46);
                 transition: border-color 0.4s ease;               
                 }
             }
-            }   
+        }   
     }
     &_link{  
         color: $colorOne;
@@ -91,42 +90,8 @@ $colorOne: rgb(47, 46, 46);
         }
     }
 }
-// @media (max-width: 639px) {
-//     .menu {
-//         &_list{
-//             display: flex;
-//             flex-wrap: wrap;
-//         }
-//             li{
-//                 flex: 1 0 33.333%;
-//                 margin-top: -5px;
-//             }
-//         &_link{
-//             padding: 0px;
-//         }
-//         &_body{
-//             padding: 15px 10px 0px 10px;
-//         }
-//     }
-// }
-// @media (max-width: 479px) {
-//     .menu {
-//         &_list{
-//             display: flex;
-//             flex-wrap: wrap;
-//         }
-//             li{
-//                 flex: 1 0 50%;
-//                 margin: 15px 15px;
-//             }
-//         &_link{
-//             padding: 0px;
-//         }
-//         &_body{
-//             padding: 0 25px;
-//         }
-//     }
-// }
+
+
 
 
 //burger_________________________________
@@ -146,7 +111,6 @@ $colorOne: rgb(47, 46, 46);
         left: 82%;
         padding: 10px;
 
-
         span, &::after, &::before {
             left: 0;
             height: 10%;
@@ -157,11 +121,11 @@ $colorOne: rgb(47, 46, 46);
             z-index: 6;
             padding: 1px;
         }
+
         span{
             top: 50%;
             transform: scale(1) translate(0, -50%);
         }
-
     }
 
     .burger::after{
@@ -192,14 +156,12 @@ $colorOne: rgb(47, 46, 46);
         overflow: auto;
         top: 0;
         left: -100%;
-        // left: 0;
-
         width: 100%;
         height: 100%;
         background-color: $background_color;
         padding: 100px 30px 30px 30px;
         transition: left 0.3s ease 0s;
-        // z-index: 333;
+
         &::before{
             content: "";
             width: 100%;
@@ -211,12 +173,12 @@ $colorOne: rgb(47, 46, 46);
             z-index: 3;
         }
     }
+
     .menu_body._active{
-        left: 0;
+        left: 0%;
     }
     .menu_list li:not(:last-child){
-        padding: 0 0 10px 0;
-        
+        padding: 0 0 10px 0;        
     }
     .menu_link{
         font-size: 24px;
@@ -227,18 +189,15 @@ $colorOne: rgb(47, 46, 46);
         position: relative;
 
         li div{
-            border-color: $background_color;
-            
+            border-color: $background_color;            
         }
     }
-    header{   
-        // height: 100%;  
+    header{    
         overflow: hidden; 
     }
     .header_menu{
         width: 100%;
-    }
-    
+    }    
 }
 
 .hidden_head .menu_body::before {
