--- a/#src/scss/static_bg_photo.scss
+++ b/#src/scss/static_bg_photo.scss
@@ -40,9 +40,32 @@ $white: #fff;
                 line-height: normal;
                 //for bloom
                 opacity: 0;
+                transition: ease 1s all;
                
             }
         }
+    }
+}
+
+//Animations---------------------------------------------
+//-------------------------------------------------------
+.bloom{
+    animation-duration: 1s;
+    animation-name: bloom;
+    animation-timing-function: linear;
+    transition: ease 1s all;
+}
+
+@keyframes bloom{
+    0%{
+    opacity: 0;
+    position: absolute;
+    bottom: -50px;
+    }
+    100%{
+    opacity: 1;
+    bottom: 0;
+    position: relative;
     }
 }
 
